--- a/equipsafety.com/index.html
+++ b/equipsafety.com/index.html
@@ -15,6 +15,6 @@
 </head>
 <body>
     <h1>🏥 EquipSafety System</h1>
-    <p>Please scan the QR code on your equipment to access training materials and safety checks.</p>
+    <p>This page is for instructions for how to use Transactive xtra 200.</p>
 </body>
 </html>
