--- a/equipsafety.com/index.html
+++ b/equipsafety.com/index.html
@@ -101,7 +101,7 @@
             <h2>🎥 Video Tutorial</h2>
             <div class="video-container">
                 <iframe 
-                    src="https://www.youtube.com/embed/YOUR_VIDEO_ID" 
+                    src="https://www.youtube.com/embed/vkGFVAFLeZU" 
                     frameborder="0" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen>
