--- a/equipsafety.com/index.html
+++ b/equipsafety.com/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Patient Hoist - Room 12 | Safety Check</title>
+    <title>Patient Hoist - Trelawneys Room | Safety Check</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
