--- a/equipsafety.com/index.html
+++ b/equipsafety.com/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Patient Hoist - Trelawneys Room | Safety Check</title>
+    <title>Patient Hoist - Room 12 | Safety Check</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
@@ -131,8 +131,11 @@
         <div class="section">
             <h2>✅ Complete Training & Equipment Check</h2>
             <iframe 
-                class="form-embed"
-                src="https://app.smartsuite.com/form/YOUR_FORM_ID?prefill_equipment=HOIST-ROOM12">
+                src="https://app.smartsuite.com/form/sba974gi/gZcZ3itJwy?header=false" 
+                width="100%" 
+                height="800px" 
+                frameborder="0"
+                class="form-embed">
             </iframe>
         </div>
     </div>
