--- a/equipsafety.com/trelawney/hoist.html
+++ b/equipsafety.com/trelawney/hoist.html
@@ -92,8 +92,8 @@
     <div class="container">
         <!-- Header -->
         <div class="header">
-            <h1>🏥 Patient Hoist</h1>
-            <p>Trelawney Care Home</p>
+            <h1>🏥 Transactive xtra 200 Hoist</h1>
+            <p>Trelawney's Room</p>
         </div>
 
         <!-- Video Tutorial -->
