--- a/equipsafety.com/trelawneys-floor-bed.html
+++ b/equipsafety.com/trelawneys-floor-bed.html
@@ -106,8 +106,8 @@
 
     <!-- 1. HEADER -->
     <div class="header">
-        <h1>🏥 FloorBed 1</h1>
-        <p>Care Home Equipment</p>
+        <h1>🏥 FloorBed</h1>
+        <p>Trelawneys Room</p>
     </div>
 
     <!-- 2. VIDEO TUTORIAL -->
