--- a/equipsafety.com/chair-power.html
+++ b/equipsafety.com/chair-power.html
@@ -128,7 +128,7 @@
         <h2>📄 Operating Instructions</h2>
         <iframe 
             class="doc-container"
-            src="https://www.invacare.co.uk/sites/gb/files/csv_migration/product_docs/technical_docs/DTEC000031_1532486~N-TDX_SP2_Range_service_manual.pdf">
+            src="https://www.invacare.co.uk/sites/gb/files/csv_migration/product_docs/technical_docs/DTEC000031_1532486~N-TDX_SP2_Range_service_manual.pdf#toolbar=0&navpanes=0&scrollbar=0">
         </iframe>
         <p style="margin-top: 10px; font-size: 14px; color: #666;">
             <a href="https://www.invacare.co.uk/sites/gb/files/csv_migration/product_docs/technical_docs/DTEC000031_1532486~N-TDX_SP2_Range_service_manual.pdf" target="_blank" rel="noopener">
