--- a/equipsafety.com/trelawneys-floor-bed.html
+++ b/equipsafety.com/trelawneys-floor-bed.html
@@ -149,11 +149,7 @@
     <!-- 5. SAFETY CHECK FORM -->
     <div class="section" style="border-bottom: none;">
         <h2>✅ Safety Check & Training Log</h2>
-        <iframe 
-            class="form-container"
-            src="https://app.smartsuite.com/form/sba974gi/gZcZ3itJwy?header=false"
-            title="Safety Check Form">
-        </iframe>
+        <iframe src="https://app.smartsuite.com/form/sba974gi/qsfREZYzHf?header=false" width="100%" height="600px" frameborder="0"></iframe>
     </div>
 
 </div>
