--- a/equipsafety.com/trelawneys-floor-bed.html
+++ b/equipsafety.com/trelawneys-floor-bed.html
@@ -107,7 +107,7 @@
     <!-- 1. HEADER -->
     <div class="header">
         <h1>🏥 FloorBed 1</h1>
-        <p>Care Home Equipment</p>
+        <p>Trelawney's Room</p>
     </div>
 
     <!-- 2. VIDEO TUTORIAL -->
