--- a/equipsafety.com/chair-power.html
+++ b/equipsafety.com/chair-power.html
@@ -107,7 +107,7 @@
     <!-- 1. HEADER -->
     <div class="header">
         <h1>🏥 Invacare TDX SP2 Power Chair</h1>
-        <p>Care Home Equipment</p>
+        <p>Trelawney,s Room</p>
     </div>
 
     <!-- 2. VIDEO TUTORIAL -->
