--- a/equipsafety.com/trelawneys-floor-bed.html
+++ b/equipsafety.com/trelawneys-floor-bed.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FloorBed 1 | Care Home</title>
+    <title>FloorBed  | Care Home</title>
     <style>
         /* CORE VARIABLES */
         :root {
@@ -106,7 +106,7 @@
 
     <!-- 1. HEADER -->
     <div class="header">
-        <h1>🏥 FloorBed 1</h1>
+        <h1>🏥 FloorBed</h1>
         <p>Trelawney's Room</p>
     </div>
 
