--- a/equipsafety.com/raz-art-shower-chair.html
+++ b/equipsafety.com/raz-art-shower-chair.html
@@ -134,7 +134,9 @@
                 Get instant answers about operating this equipment in your language
             </p>
             <button class="chatbot-trigger" onclick="openChatbot()">
-                <span>🤖</span> Open AI Assistant
+                <span>🤖</span> AI Assistant is active!
+
+Tap the chat bubble in the bottom right corner to ask questions about this bed in any language.
             </button>
         </div>
 
