--- a/equipsafety.com/raz-art-shower-chair.html
+++ b/equipsafety.com/raz-art-shower-chair.html
@@ -148,7 +148,7 @@
         <div class="section">
             <h2>💬 Need Help? Ask Our Multilingual Assistant</h2>
             <button class="chatbot-trigger" onclick="openChatbot()">
-            <p>Tap the chat bubble in the bottom right corner to ask questions about this bed in any language.</p>
+            <p>Tap the chat bubble in the bottom right corner to ask questions about this shower chair in any language.</p>
             </button>
         </div>
 
