--- a/equipsafety.com/trelawney/chair-power.html
+++ b/equipsafety.com/trelawney/chair-power.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>Invacare TDX SP2 Power Chair | Care Home</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -112,7 +115,7 @@
             <h2>🎥 Video Tutorial</h2>
             <div class="video-container">
                 <iframe 
-                    src="https://www.youtube.com/embed/urY7L8wedDA?start=21" 
+                    src="https://www.youtube.com/embed/urY7L8wedDA?start=21&rel=0&modestbranding=1" 
                     frameborder="0" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen>
@@ -152,20 +155,14 @@
 </div>
 
     <!-- FastBots Chatbot Widget -->
+    <script defer src="https://app.fastbots.ai/embed.js" data-bot-id="cmiiybs4o002gpa1pe8hdrsvn"></script>
     <script>
-        window.fasBotsConfig = {
-            chatbotId: "YOUR_FASTBOTS_ID",
-            domain: "https://fasapi.com"
-        };
-        
         function openChatbot() {
-            // FastBots provides this code - it opens the chat widget
             if (window.FastBots) {
                 window.FastBots.open();
             }
         }
     </script>
-    <script src="https://fasapi.com/embed.js" async></script>
 
 </body>
 </html>
