--- a/equipsafety.com/trelawney/hoist.html
+++ b/equipsafety.com/trelawney/hoist.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>Hoist Safety Check | Trelawney</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -101,7 +104,7 @@
             <h2>🎥 Video Tutorial</h2>
             <div class="video-container">
                 <iframe 
-                    src="https://www.youtube.com/embed/vkGFVAFLeZU" 
+                    src="https://www.youtube.com/embed/vkGFVAFLeZU?rel=0&modestbranding=1" 
                     frameborder="0" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen>
