--- a/equipsafety.com/trelawneys-floor-bed.html
+++ b/equipsafety.com/trelawneys-floor-bed.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FloorBed  | Care Home</title>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+    <title>FloorBed | Care Home</title>
     <style>
         /* CORE VARIABLES */
         :root {
@@ -115,7 +118,7 @@
         <h2>🎥 Video Tutorial</h2>
         <div class="video-wrapper">
             <iframe 
-                src="https://www.youtube.com/embed/4d63fxqte98" 
+                src="https://www.youtube.com/embed/4d63fxqte98?rel=0&modestbranding=1" 
                 title="FloorBed Training Video"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen>
@@ -159,5 +162,4 @@
 
 </body>
 </html>
-
 
