--- a/equipsafety.com/demo/index.html
+++ b/equipsafety.com/demo/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>FloorBed Demo | EquipSafety</title>
     <meta name="robots" content="noindex, nofollow">
     <style>
@@ -155,7 +158,7 @@
         <h2>🎥 Video Tutorial</h2>
         <div class="video-wrapper">
             <iframe 
-                src="https://www.youtube.com/embed/4d63fxqte98" 
+                src="https://www.youtube.com/embed/4d63fxqte98?rel=0&modestbranding=1" 
                 title="FloorBed Training Video"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen>
