--- a/equipsafety.com/hydrotilt.html
+++ b/equipsafety.com/hydrotilt.html
@@ -261,7 +261,7 @@
     (function() {
         pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
 
-        const PDF_URL = '/UI-HydroTilt-XL-User-Guide-compressed.pdf';
+        const PDF_URL = '/UI-HydroTilt-XL-User-Guide-compressed.pdf?v=' + Date.now();
         
         let pdfDoc = null;
         let currentPage = 1;
