--- a/equipsafety.com/chair-power.html
+++ b/equipsafety.com/chair-power.html
@@ -147,13 +147,11 @@
         </div>
     </div>
 
-    <script defer src="https://chat.autoreplychat.com/embed.js" data-bot-id="cmiiybs4o002gpa1pe8hdrsvn"></script>
-
+    <!-- AutoReplyChat Chatbot Widget -->
+    <script defer src="https://autoreplychat.com/embed.js" data-bot-id="f76e068e7d5aa0078b51ded3"></script>
     <script>
         function openChatbot() {
-            if (window.autoreplychat) {
-                window.autoreplychat.open();
-            }
+            AutoReplyChat.open();
         }
     </script>
 </body>
