--- a/equipsafety.com/hoist-room12.html
+++ b/equipsafety.com/hoist-room12.html
@@ -143,7 +143,7 @@
         </div>
     </div>
 
-    <!-- FastBots Chatbot -->
-    <script defer src="https://app.fastbots.ai/embed.js" data-bot-id="cmiiybs4o002gpa1pe8hdrsvn"></script>
+    <!-- AutoReplyChat Chatbot Widget -->
+    <script defer src="https://autoreplychat.com/embed.js" data-bot-id="f76e068e7d5aa0078b51ded3"></script>
 </body>
 </html>
