--- a/equipsafety.com/raz-art-shower-chair.html
+++ b/equipsafety.com/raz-art-shower-chair.html
@@ -162,14 +162,11 @@
         </div>
     </div>
 
-    <!-- FastBots Chatbot Widget -->
-    <script defer src="https://chat.autoreplychat.com/embed.js" data-bot-id="cmiiybs4o002gpa1pe8hdrsvn"></script>
+    <!-- AutoReplyChat Chatbot Widget -->
+    <script defer src="https://autoreplychat.com/embed.js" data-bot-id="f76e068e7d5aa0078b51ded3"></script>
     <script>
         function openChatbot() {
-            // Trigger the chatbot widget
-            if (window.AutoReplyChat) {
-                window.AutoReplyChat.open();
-            }
+            AutoReplyChat.open();
         }
     </script>
 </body>
