--- a/equipsafety.com/trelawneys-floor-bed.html
+++ b/equipsafety.com/trelawneys-floor-bed.html
@@ -157,9 +157,8 @@
 
 </div>
 
-<!-- FASTBOTS SCRIPT -->
-<script defer src="https://app.fastbots.ai/embed.js" data-bot-id="cmiiybs4o002gpa1pe8hdrsvn"></script>
+<!-- AutoReplyChat Chatbot Widget -->
+<script defer src="https://autoreplychat.com/embed.js" data-bot-id="f76e068e7d5aa0078b51ded3"></script>
 
 </body>
 </html>
-
