--- a/equipsafety.com/demo/index.html
+++ b/equipsafety.com/demo/index.html
@@ -357,7 +357,8 @@
 
 </div>
 
-<script defer src="https://app.fastbots.ai/embed.js" data-bot-id="cmiiybs4o002gpa1pe8hdrsvn"></script>
+<!-- AutoReplyChat Chatbot Widget -->
+<script defer src="https://autoreplychat.com/embed.js" data-bot-id="f76e068e7d5aa0078b51ded3"></script>
 
 <script>
 (function() {
